syntax = "proto3";

package protobuf;

import "google/protobuf/empty.proto";

service Sequence {
    rpc Increment(google.protobuf.Empty) returns (IncrementNumber);
    rpc Fibonacci(google.protobuf.Empty) returns (FibonacciNumber);
    rpc Unique(google.protobuf.Empty) returns (UniqueString);
}

message IncrementNumber {
    int64 id = 1;
    int64 value = 2;
}

message FibonacciNumber {
    int32 id = 1;
    int64 value = 2;
}

message UniqueString {
    int64 id = 1;
    string value = 2;
}
